Adicionar tarefas de limpeza para arquivos antigos.

--- a/src/FileCleaner/appsettings.json
+++ b/src/FileCleaner/appsettings.json
@@ -5,11 +5,15 @@
     "CleaningTasks": [
       {
         // O caminho da tarefa de limpeza.
-        "Path": null
+        "Path": null,
+        // A quantidade de dias atrás para um arquivo ser excluído.
+        "FilesDaysAgo": null
       },
       {
         // O caminho da tarefa de limpeza.
-        "Path": null
+        "Path": null,
+        // A quantidade de dias atrás para um arquivo ser excluído.
+        "FilesDaysAgo": null
       }
     ]
   }
