feat: Permite mover arquivos periodicamente

--- a/src/FileCleaner/appsettings.json
+++ b/src/FileCleaner/appsettings.json
@@ -1,19 +1,28 @@
 {
   // As configurações do aplicativo.
   "AppSettings": {
+    "LoopDelay": null, // O tempo em minutos entre cada execução do loop de limpeza, null para desativar o loop.
     // As tarefas de limpeza a serem executadas pelo aplicativo.
     "CleaningTasks": [
       {
         // O caminho da tarefa de limpeza.
         "Path": null,
         // A quantidade de dias atrás para um arquivo ser excluído.
-        "FilesDaysAgo": null
+        "FilesDaysAgo": null,
+        // O caminho para mover os arquivos antes de excluí-los.
+        "MovePath": null,
+        // A quantidade de dias atrás para um arquivo ser movido antes de ser excluído. (Deve ser menor que FileDaysAgo)
+        "MoveFilesDaysAgo": null
       },
       {
         // O caminho da tarefa de limpeza.
         "Path": null,
         // A quantidade de dias atrás para um arquivo ser excluído.
-        "FilesDaysAgo": null
+        "FilesDaysAgo": null,
+        // O caminho para mover os arquivos antes de excluí-los.
+        "MovePath": null,
+        // A quantidade de dias atrás para um arquivo ser movido antes de ser excluído. (Deve ser menor que FileDaysAgo)
+        "MoveFilesDaysAgo": null
       }
     ]
   }
